--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         </div>
         <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-            <img src="pictures/main jacket.png" class="img-fluid w-100" alt="">
+            <img src="main jacket.png" class="img-fluid w-100" alt="">
         </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
                     <p class="fw-bold p-0 m-0">Women</p>
                     <p class="p-0 m-0">Spring 2018</p>
                 </div>
-                <img src="pictures//women.jpg" class="img-fluid" height="200" width="200" alt="">
+                <img src="/women.jpg" class="img-fluid" height="200" width="200" alt="">
             </div>
                 </div>
                  <div class="col-md">
@@ -256,4 +256,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
+
  
