--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="fw-bold p-0 m-0">Women</p>
                     <p class="p-0 m-0">Spring 2018</p>
                 </div>
-                <img src="/women.jpg" class="img-fluid" height="200" width="200" alt="">
+                <img src="women.jpg" class="img-fluid" height="200" width="200" alt="">
             </div>
                 </div>
                  <div class="col-md">
@@ -77,7 +77,7 @@
                     <p class="fw-bold p-0 m-0">Man</p>
                     <p class="p-0 m-0">Spring 2018</p>
                 </div>
-                <img src="pictures//man.jpg" class="img-fluid" height="200" width="200" alt="">
+                <img src="man.jpg" class="img-fluid" height="200" width="200" alt="">
             </div>
                 </div>
                  <div class="col-md">
@@ -86,7 +86,7 @@
                     <p class="fw-bold p-0 m-0">Accessories</p>
                     <p class="p-0 m-0">Spring 2018</p>
                 </div>
-                <img src="pictures//black cap.jpeg" class="img-fluid" height="200" width="200" alt="">
+                <img src="black cap.jpeg" class="img-fluid" height="200" width="200" alt="">
             </div>
                 </div>
         </div>
@@ -107,82 +107,82 @@
     </div>
     <div class="container d-flex flex-wrap g-2 mt-4 justify-content-around align-items-center">
             <div class="">
-                <img src="pictures/images (29).jpeg" class="m-1" height="225" width="225" alt="">
+                <img src="images (29).jpeg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Front Pocket Suit</p>
                 <p class="p-0 m-0">$85.14</p>
             </div>
              <div class="">
-                <img src="pictures//m dress 1.jpeg" class="m-1" height="225" width="225" alt="">
+                <img src="m dress 1.jpeg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Native Wear</p>
                 <p class="p-0 m-0">$52.70</p>
             </div>
              <div class="">
-                <img src="pictures//m dress.jpeg" class="m-1" height="225" width="225" alt="">
+                <img src="m dress.jpeg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Formal Wear</p>
                 <p class="p-0 m-0">$44.2</p>
             </div>
              <div class="">
-                <img src="pictures//fnd11.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="fnd11.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Classic Trench Suit</p>
                 <p class="p-0 m-0">$75.00</p>
             </div>
              <div class="">
-                <img src="pictures//fnd12.png" class="m-1" height="225" width="225" alt="">
+                <img src="fnd12.png" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Herschel supply </p>
                 <p class="p-0 m-0">$32.5</p>
             </div>
              <div class="">
-                <img src="pictures//shirt.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="shirt.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Turkish Dress</p>
                 <p class="p-0 m-0">$17.3</p>
             </div>
              <div class="">
-                <img src="pictures//fnd13.jpg" class="m-1"height="225" width="225" alt="">
+                <img src="fnd13.jpg" class="m-1"height="225" width="225" alt="">
                 <p class="p-0 m-0">Shirt in Stretch Cotton</p>
                 <p class="p-0 m-0">$44.7</p>
             </div>
              <div class="">
-                <img src="pictures//fnd14.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="fnd14.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Classic female Wear</p>
                 <p class="p-0 m-0">$22.54</p>
             </div>
              <div class="">
-                <img src="pictures//nfd4.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="nfd4.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Pieces Metalic Printed</p>
                 <p class="p-0 m-0">$18.96</p>
             </div>
              <div class="">
-                <img src="pictures//shoe 1.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="shoe 1.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Vomero5 Sneaker</p>
                 <p class="p-0 m-0">$25.8</p>
             </div>
              <div class="">
-                <img src="pictures/images (36).jpeg" class="m-1" height="225" width="225" alt="">
+                <img src="images (36).jpeg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Piaget Wrist Watch</p>
                 <p class="p-0 m-0">$77.2</p>
             </div>
              <div class="">
-                <img src="pictures//female7.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="female7.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Female Jacket</p>
                 <p class="p-0 m-0">$41.3</p>
             </div>
              <div class="">
-                <img src="pictures//female 2.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="female 2.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Anarkali Suit</p>
                 <p class="p-0 m-0">$88.3</p>
             </div>
              <div class="">
-                <img src="pictures//female 6.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="female 6.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Femme T-shirt</p>
                 <p class="p-0 m-0">$18.4</p>
             </div>
              <div class="">
-                <img src="pictures//watch 3.jpg" class="m-1" height="225" width="225" alt="">
+                <img src="watch 3.jpg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">Apple Wrist watch</p>
                 <p class="p-0 m-0">$22.6</p>
             </div>
              <div class="">
-                <img src="pictures/images (40).jpeg" class="m-1" height="225" width="225" alt="">
+                <img src="images (40).jpeg" class="m-1" height="225" width="225" alt="">
                 <p class="p-0 m-0">female long gown</p>
                 <p class="p-0 m-0">$45.8</p>
             </div>
@@ -242,11 +242,11 @@
         </div>
         </div>
         <div class=" my-4 d-flex justify-content-center align-items-center">
-            <img src="pictures//paypal.jpeg" class="img-fluid" height="50" width="50" alt="">
-            <img src="pictures//visa.jpeg" class="img-fluid" height="50" width="50" alt="">
-            <img src="pictures//mastercard.jpeg" class="img-fluid" height="50" width="50" alt="">
-            <img src="pictures//amex.jpeg" class="img-fluid" height="5" width="30" alt="">
-            <img src="pictures//discover.jpeg" class="img-fluid" height="50" width="50" alt="">
+            <img src="paypal.jpeg" class="img-fluid" height="50" width="50" alt="">
+            <img src="visa.jpeg" class="img-fluid" height="50" width="50" alt="">
+            <img src="mastercard.jpeg" class="img-fluid" height="50" width="50" alt="">
+            <img src="amex.jpeg" class="img-fluid" height="5" width="30" alt="">
+            <img src="discover.jpeg" class="img-fluid" height="50" width="50" alt="">
         </div>
         <p class="mt-3 d-flex justify-content-center align-items-center">Copyright ©2023 All rights reserved with❤️ by Colorlib & distributed by Themewagon</p>
     </footer>
@@ -258,3 +258,4 @@
 </html>
 
  
+
